# ChangeLog for net-misc/smb4k
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/smb4k/ChangeLog,v 1.59 2007/12/03 15:31:14 carlo Exp $

*smb4k-0.8.7 (03 Dec 2007)

  03 Dec 2007; Carsten Lohrke <carlo@gentoo.org> +smb4k-0.8.7.ebuild:
  Version bump.

*smb4k-0.8.6 (21 Oct 2007)

  21 Oct 2007; Carsten Lohrke <carlo@gentoo.org> +smb4k-0.8.6.ebuild:
  Version bump.

*smb4k-0.8.4 (19 Jul 2007)

  19 Jul 2007; Tobias Heinlein <keytoaster@gentoo.org> +smb4k-0.8.4.ebuild:
  Version bump.

*smb4k-0.8.3 (05 May 2007)

  05 May 2007; Carsten Lohrke <carlo@gentoo.org> +smb4k-0.8.3.ebuild:
  Version bump.

*smb4k-0.8.2 (01 May 2007)

  01 May 2007; Carsten Lohrke <carlo@gentoo.org> -smb4k-0.6.10.ebuild,
  -smb4k-0.6.10a.ebuild, +smb4k-0.8.2.ebuild:
  Version bump. Clean up.

  25 Apr 2007; Christian Faulhammer <opfer@gentoo.org> smb4k-0.8.1.ebuild:
  stable amd64, bug 175395

  22 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org> smb4k-0.8.1.ebuild:
  ppc stable, bug #175395

  22 Apr 2007; Raúl Porcel <armin76@gentoo.org> smb4k-0.8.1.ebuild:
  x86 stable wrt #175395

*smb4k-0.8.1 (08 Apr 2007)

  08 Apr 2007; Carsten Lohrke <carlo@gentoo.org> -smb4k-0.8.0.ebuild,
  +smb4k-0.8.1.ebuild:
  Version bump.

  23 Jan 2007; Steve Dibb <beandog@gentoo.org> smb4k-0.6.10a.ebuild:
  amd64 stable, security bug 156152

  23 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  smb4k-0.6.10a.ebuild:
  Stable on ppc wrt bug #156152.

  23 Dec 2006; Andrej Kacian <ticho@gentoo.org> smb4k-0.6.10a.ebuild:
  Stable on x86, security bug #156152.

*smb4k-0.6.10a (22 Dec 2006)

  22 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> +smb4k-0.6.10a.ebuild:
  Bump 0.6.10 to 0.6.10a plus security patch.

*smb4k-0.8.0 (22 Dec 2006)

  22 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> -smb4k-0.7.0.ebuild,
  -smb4k-0.7.2.ebuild, -smb4k-0.7.3.ebuild, -smb4k-0.7.4.ebuild,
  -smb4k-0.7.5.ebuild, +smb4k-0.8.0.ebuild: