@@ -1,37 +1,22 @@
 DIST smb4k-0.8.1.tar.bz2 2041381 RMD160 5288e3b759438c67e835fbb75302cca0529606ed SHA1 8b4c87226a2bdd9e7ec0d853e498a09fcbda4b80 SHA256 158bd7d9c2333f4c1477e917def055a4def29be04fb0a2beee91a73e168c6f53
-DIST smb4k-0.8.2.tar.bz2 2041741 RMD160 80a6d7303a90d2149a137e19683b5c97bd9353bb SHA1 2cc8b19aa7ddbd127889ebb2169be5da25f35447 SHA256 12ca43bd306c7e4588da852dd2b37c0b0701103e2d4c9dd4c4a63797dcdc5650
-DIST smb4k-0.8.3.tar.bz2 2042328 RMD160 28bfb9178b7c4ad1bd3368254aa27ed2bf670f85 SHA1 22d9b2b43e9c5cad992ecedf146f18e5422226fb SHA256 12b638f54045d4212ea150cd6a385f05c5b1918c3ce6430945f2069500f11a35
-DIST smb4k-0.8.4.tar.bz2 2059226 RMD160 eb4c095bd1112e6f1d1717d84752bd7e32b7d9cf SHA1 eb04a9f09bf47d0c5b952416454d0255b4c776d5 SHA256 580ccd3f67f533b24c3624ae24cf1f4abac4923fba7da3e185ddd20ff3a7a0df
-DIST smb4k-0.8.6.tar.bz2 2117037 RMD160 0b9a922263033eede73482d3e216d0faff811ba9 SHA1 867b2377f0cb085cfa9025ed7af38643ad22cfdd SHA256 e9c79ef189b4bb1d2947bd8950a83137bb8e744f1517bc913021a35327243170
 DIST smb4k-0.8.7.tar.bz2 2029476 RMD160 181a426f060ea082b7610f045a19013f2d5e58d7 SHA1 eb33f6508fd5d75172884a7532fa77cdb3496e12 SHA256 2da66a117331bf4551150f091ba4c132b4c8ab32ff01e5c7b2f93d5f343cb4c6
+DIST smb4k-0.9.0.tar.bz2 1966857 RMD160 971230588360b5286460eed922215f0cf5ce6ae5 SHA1 b7b45af82a6a375049fdf13341d3eb5b88901460 SHA256 50e89534d331846bbd72d2f3aba1744b83aa7ffa7deb7669ed8940f6fac8ed52
 EBUILD smb4k-0.8.1.ebuild 530 RMD160 095a0319f31d26264730477ce149e499400b4672 SHA1 b90074a1dcdd1f1a13cbce36b92c1bb764623817 SHA256 4d6508d84d12ebc1636f8f034ec5d0bbe78bcb33bfed24e8ec23b2b6ec253446
 MD5 a289308e54346838433333ec05b9d87d smb4k-0.8.1.ebuild 530
 RMD160 095a0319f31d26264730477ce149e499400b4672 smb4k-0.8.1.ebuild 530
 SHA256 4d6508d84d12ebc1636f8f034ec5d0bbe78bcb33bfed24e8ec23b2b6ec253446 smb4k-0.8.1.ebuild 530
-EBUILD smb4k-0.8.2.ebuild 533 RMD160 cddf8c490477c90482bae44adeb35b2fcc65cd09 SHA1 fe999f0a35a2acef9f67d8b64deaea8764130e0d SHA256 30a7a5295d8f911f042d4930d0838f92d4d6e99c5687903a133ae033d62cae20
-MD5 fc91b4af1ce4d25108b4e95d473651ac smb4k-0.8.2.ebuild 533
-RMD160 cddf8c490477c90482bae44adeb35b2fcc65cd09 smb4k-0.8.2.ebuild 533
-SHA256 30a7a5295d8f911f042d4930d0838f92d4d6e99c5687903a133ae033d62cae20 smb4k-0.8.2.ebuild 533
-EBUILD smb4k-0.8.3.ebuild 533 RMD160 41df8e9972e838a7776f1a211be2b3bdc65cedca SHA1 5f6d744b364524b8753982aa969774e9494a0f62 SHA256 6029dcbd47d0add4520257fdff530fe7ab45741613a4198db8e7fe7271fc5daf
-MD5 216a58dec3380f97c52f016f019c2804 smb4k-0.8.3.ebuild 533
-RMD160 41df8e9972e838a7776f1a211be2b3bdc65cedca smb4k-0.8.3.ebuild 533
-SHA256 6029dcbd47d0add4520257fdff530fe7ab45741613a4198db8e7fe7271fc5daf smb4k-0.8.3.ebuild 533
-EBUILD smb4k-0.8.4.ebuild 538 RMD160 7b9cfe75505ca297f4aa0f9e8004dcb3c0170291 SHA1 558caf6fb628dd0e9e751562b10fe71cf04f27d2 SHA256 8e1337552389832b17454c207d441a96e797df9874b5d307b5e48dd33b7856fd
-MD5 5b86b3a7d1ae32180baa7186c676faa1 smb4k-0.8.4.ebuild 538
-RMD160 7b9cfe75505ca297f4aa0f9e8004dcb3c0170291 smb4k-0.8.4.ebuild 538
-SHA256 8e1337552389832b17454c207d441a96e797df9874b5d307b5e48dd33b7856fd smb4k-0.8.4.ebuild 538
-EBUILD smb4k-0.8.6.ebuild 533 RMD160 887b08dd71340422eec35b5bf2de215c8050a9fa SHA1 4209e04491f41408cfd14cc0115c91bdff33d03e SHA256 e47114f20a9bcd396962a731a269678b37907bb2d33a45297f8bacdc78223949
-MD5 c46f0dc675839dbef0496f63eb97e883 smb4k-0.8.6.ebuild 533
-RMD160 887b08dd71340422eec35b5bf2de215c8050a9fa smb4k-0.8.6.ebuild 533
-SHA256 e47114f20a9bcd396962a731a269678b37907bb2d33a45297f8bacdc78223949 smb4k-0.8.6.ebuild 533
 EBUILD smb4k-0.8.7.ebuild 533 RMD160 fe575a1047dad6f3f33339801b7c47d9da4c8dc1 SHA1 2de463d599f2188bde6b1ee29086732767b0268a SHA256 6ce17771cc45d6d275233bb1b2ccbabac6d89fa54880a5568c2e8fc59751a0d5
 MD5 e44bab6943a6efcefaf562f934fca771 smb4k-0.8.7.ebuild 533
 RMD160 fe575a1047dad6f3f33339801b7c47d9da4c8dc1 smb4k-0.8.7.ebuild 533
 SHA256 6ce17771cc45d6d275233bb1b2ccbabac6d89fa54880a5568c2e8fc59751a0d5 smb4k-0.8.7.ebuild 533
-MISC ChangeLog 7954 RMD160 016252f35d39bf659151d073106470008a42d391 SHA1 4a4702897ee54ffbdec9109bf283a2e0d67113fa SHA256 931ea9e0b079214de623917609c7e9effbd5e7eee6226f93fd1bbda229248089
-MD5 744d79da3941069555f961a456b20226 ChangeLog 7954
-RMD160 016252f35d39bf659151d073106470008a42d391 ChangeLog 7954
-SHA256 931ea9e0b079214de623917609c7e9effbd5e7eee6226f93fd1bbda229248089 ChangeLog 7954
+EBUILD smb4k-0.9.0.ebuild 533 RMD160 7bf40b712e3b24b1fb1559df8e9f7a2519be638e SHA1 67a1be6020015654d53abd0a2957b5ac73aa2edf SHA256 303c860d1857cb2b1eab7eaacb0902f9f990539b84aacb86fec0dcee3734b459
+MD5 923d6a7ef23d0a92602b1210d7ff5749 smb4k-0.9.0.ebuild 533
+RMD160 7bf40b712e3b24b1fb1559df8e9f7a2519be638e smb4k-0.9.0.ebuild 533
+SHA256 303c860d1857cb2b1eab7eaacb0902f9f990539b84aacb86fec0dcee3734b459 smb4k-0.9.0.ebuild 533
+MISC ChangeLog 8157 RMD160 91dd9451ee723de711899fce9aefc198851586b6 SHA1 31c89633c9952f4e7f8d5acb3fb7ceb12ea0f3d8 SHA256 3c1d5ba491829d1e410f8cdd3f54a71414ee9442b88e80bcfb581c47d84af30b
+MD5 87d7c567b9f87d7b2ecd3af6546b764c ChangeLog 8157
+RMD160 91dd9451ee723de711899fce9aefc198851586b6 ChangeLog 8157
+SHA256 3c1d5ba491829d1e410f8cdd3f54a71414ee9442b88e80bcfb581c47d84af30b ChangeLog 8157
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
@@ -39,18 +24,9 @@ SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a metadata
 MD5 ea07107eff9275851b809bccb2ac9a51 files/digest-smb4k-0.8.1 241
 RMD160 cb8c2ca9f080a72fb5eef3dd28c494fe73f06b4b files/digest-smb4k-0.8.1 241
 SHA256 1db8b5463aa05f48fa8a14e08b897b311572ea6029869960f5416ff1fe10ca0b files/digest-smb4k-0.8.1 241
-MD5 683fa9971c64c45b09ee3bc95056a2a7 files/digest-smb4k-0.8.2 241
-RMD160 1b21a6848478928bd6e77163775a587338c43458 files/digest-smb4k-0.8.2 241
-SHA256 884024596d7b686c10d0b4e269a394b6d3f42760429169cbe52e6847834ef64c files/digest-smb4k-0.8.2 241
-MD5 c71d1854db477324581127b4b3daa558 files/digest-smb4k-0.8.3 241
-RMD160 3e36fe1f97416aac34cceb43e3f16a6403076897 files/digest-smb4k-0.8.3 241
-SHA256 6be103a8de24acf2bee05c7ddcd4fee4366ca51f4c9bdf357a4a76c2d3e25108 files/digest-smb4k-0.8.3 241
-MD5 b30ce45865c50e58058c2bf3b722f0fd files/digest-smb4k-0.8.4 241
-RMD160 5f36363e3aa82d7d86e431955230d75050a22926 files/digest-smb4k-0.8.4 241
-SHA256 4e0823c8d9b04d8e01ca795cb9821816e905010985d8571016abcb702828d884 files/digest-smb4k-0.8.4 241
-MD5 d30f096c1003bae9a01be02985495937 files/digest-smb4k-0.8.6 241
-RMD160 31c334cf3e38c00d85f28b9c0829b35bffbde93b files/digest-smb4k-0.8.6 241
-SHA256 aef985daaeb687998a0b8defbd30ee6aad68e01f6ce38b314d1ae3bba8887079 files/digest-smb4k-0.8.6 241
 MD5 f475cdc3a26d796b08e95e4703ebd8dc files/digest-smb4k-0.8.7 241
 RMD160 e53ea57ad0fd296cac587b2fbe6aec8547a04902 files/digest-smb4k-0.8.7 241
 SHA256 62e3d5c82008639030336b374c0f0ba869e8c32c02ba61d5693bc1ba85f96bd9 files/digest-smb4k-0.8.7 241
+MD5 39720a39c7694a45107beae6900c4507 files/digest-smb4k-0.9.0 241
+RMD160 1c3c7ea77b27a594d4cd0cfc3b114ff4d60f6169 files/digest-smb4k-0.9.0 241
+SHA256 55514be290ff88f5ca7bc8bf5a4dc33c272e5c94ab40f251dde0ef12d9cc6039 files/digest-smb4k-0.9.0 241
