@@ -1,3 +1,0 @@
-MD5 42edd8da953003f0e91f31ec6b9a35f4 smb4k-0.8.2.tar.bz2 2041741
-RMD160 80a6d7303a90d2149a137e19683b5c97bd9353bb smb4k-0.8.2.tar.bz2 2041741
-SHA256 12ca43bd306c7e4588da852dd2b37c0b0701103e2d4c9dd4c4a63797dcdc5650 smb4k-0.8.2.tar.bz2 2041741
