@@ -1,3 +1,0 @@
-MD5 765fc323338e9cd19d0b285ab414ab71 smb4k-0.8.3.tar.bz2 2042328
-RMD160 28bfb9178b7c4ad1bd3368254aa27ed2bf670f85 smb4k-0.8.3.tar.bz2 2042328
-SHA256 12b638f54045d4212ea150cd6a385f05c5b1918c3ce6430945f2069500f11a35 smb4k-0.8.3.tar.bz2 2042328
