@@ -1,3 +1,0 @@
-MD5 6e13c5c0c2e548187d51bc70072055e0 smb4k-0.8.4.tar.bz2 2059226
-RMD160 eb4c095bd1112e6f1d1717d84752bd7e32b7d9cf smb4k-0.8.4.tar.bz2 2059226
-SHA256 580ccd3f67f533b24c3624ae24cf1f4abac4923fba7da3e185ddd20ff3a7a0df smb4k-0.8.4.tar.bz2 2059226
