@@ -1,3 +1,0 @@
-MD5 e90e0413893eed08678c40acfe85c9f1 smb4k-0.8.6.tar.bz2 2117037
-RMD160 0b9a922263033eede73482d3e216d0faff811ba9 smb4k-0.8.6.tar.bz2 2117037
-SHA256 e9c79ef189b4bb1d2947bd8950a83137bb8e744f1517bc913021a35327243170 smb4k-0.8.6.tar.bz2 2117037
