@@ -1,0 +1,3 @@
+MD5 078a771c3e2f9577f345b46aead94342 smb4k-0.9.0.tar.bz2 1966857
+RMD160 971230588360b5286460eed922215f0cf5ce6ae5 smb4k-0.9.0.tar.bz2 1966857
+SHA256 50e89534d331846bbd72d2f3aba1744b83aa7ffa7deb7669ed8940f6fac8ed52 smb4k-0.9.0.tar.bz2 1966857
